--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Gatsby Publish
+name: CI
 
 on:
-  pull_request:
+  push:
     branches:
       - master
-  push:
+  pull_request:
     branches:
       - master
 
@@ -14,7 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:        
+        with:
+        
           node-version: '14'
           access-token: ${{ secrets.DEPLOY }}
           deploy-branch: gh-pages
+
+        
