--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - master
+      - develop
 
 jobs:
   build:
@@ -15,13 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-        
           node-version: '14'
 
-        
       - name: Install node packages
-            run: npm install
-            
+        run: npm install
+        
       - name: Check lint
         run: npm run check:lint
         
